cft.yaml
# main.tf

provider "aws" {

  region = "us-west-1"

}
 
# -------------------- VPC --------------------

resource "aws_vpc" "main" {

  cidr_block           = var.vpc_cidr

  enable_dns_support   = true

  enable_dns_hostnames = true

  tags = { Name = "Main-VPC" }

}
 
resource "aws_internet_gateway" "gw" {

  vpc_id = aws_vpc.main.id

  tags = { Name = "Internet-Gateway" }

}
 
locals {

  subnet_config = var.vpc_cidr == "10.0.0.0/16" ? {

    public_1  = "10.0.0.0/20"

    public_2  = "10.0.48.0/20"

    private_1 = "10.0.16.0/20"

    private_2 = "10.0.32.0/20"

    private_3 = "10.0.64.0/20"

    private_4 = "10.0.80.0/20"

  } : {

    public_1  = "20.0.0.0/22"

    public_2  = "20.0.12.0/22"

    private_1 = "20.0.4.0/22"

    private_2 = "20.0.8.0/22"

    private_3 = "20.0.16.0/22"

    private_4 = "20.0.20.0/22"

  }

}
 
# Subnets

resource "aws_subnet" "public_1" {

  vpc_id                  = aws_vpc.main.id

  cidr_block              = local.subnet_config.public_1

  availability_zone       = var.azs[0]

  map_public_ip_on_launch = true

  tags = { Name = "Public-Subnet-1" }

}
 
resource "aws_subnet" "public_2" {

  vpc_id                  = aws_vpc.main.id

  cidr_block              = local.subnet_config.public_2

  availability_zone       = var.azs[1]

  map_public_ip_on_launch = true

  tags = { Name = "Public-Subnet-2" }

}
 
resource "aws_subnet" "private_1" {

  vpc_id            = aws_vpc.main.id

  cidr_block        = local.subnet_config.private_1

  availability_zone = var.azs[0]

  tags = { Name = "Private-Subnet-1" }

}
 
resource "aws_subnet" "private_2" {

  vpc_id            = aws_vpc.main.id

  cidr_block        = local.subnet_config.private_2

  availability_zone = var.azs[0]

  tags = { Name = "Private-Subnet-2" }

}
 
resource "aws_subnet" "private_3" {

  vpc_id            = aws_vpc.main.id

  cidr_block        = local.subnet_config.private_3

  availability_zone = var.azs[1]

  tags = { Name = "Private-Subnet-3" }

}
 
resource "aws_subnet" "private_4" {

  vpc_id            = aws_vpc.main.id

  cidr_block        = local.subnet_config.private_4

  availability_zone = var.azs[1]

  tags = { Name = "Private-Subnet-4" }

}
 
# NAT Gateway

resource "aws_eip" "nat" {

  tags = { Name = "NAT-EIP" }

}
 
resource "aws_nat_gateway" "nat" {

  allocation_id = aws_eip.nat.id

  subnet_id     = aws_subnet.public_1.id

  tags          = { Name = "NAT-Gateway" }

  depends_on    = [aws_internet_gateway.gw]

}
 
# Route Tables

resource "aws_route_table" "public" {

  vpc_id = aws_vpc.main.id

  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.gw.id

  }

  tags = { Name = "Public-RT" }

}
 
resource "aws_route_table_association" "pub1" {

  subnet_id      = aws_subnet.public_1.id

  route_table_id = aws_route_table.public.id

}
 
resource "aws_route_table_association" "pub2" {

  subnet_id      = aws_subnet.public_2.id

  route_table_id = aws_route_table.public.id

}
 
resource "aws_route_table" "private" {

  vpc_id = aws_vpc.main.id

  route {

    cidr_block     = "0.0.0.0/0"

    nat_gateway_id = aws_nat_gateway.nat.id

  }

  tags = { Name = "Private-RT" }

}
 
resource "aws_route_table_association" "pri1" {

  subnet_id      = aws_subnet.private_1.id

  route_table_id = aws_route_table.private.id

}

resource "aws_route_table_association" "pri2" {

  subnet_id      = aws_subnet.private_2.id

  route_table_id = aws_route_table.private.id

}

resource "aws_route_table_association" "pri3" {

  subnet_id      = aws_subnet.private_3.id

  route_table_id = aws_route_table.private.id

}

resource "aws_route_table_association" "pri4" {

  subnet_id      = aws_subnet.private_4.id

  route_table_id = aws_route_table.private.id

}
 
# -------------------- RDS --------------------

resource "aws_security_group" "rds_sg" {

  name   = "rds-sg"

  vpc_id = aws_vpc.main.id

  ingress {

    from_port   = 3306

    to_port     = 3306

    protocol    = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  egress {

    from_port   = 0

    to_port     = 0

    protocol    = "-1"

    cidr_blocks = ["0.0.0.0/0"]

  }

  tags = { Name = "DB-SG" }

}
 
resource "aws_db_subnet_group" "rds" {

  name       = var.db_subnet_group_name

  subnet_ids = [aws_subnet.private_2.id, aws_subnet.private_4.id]

  tags       = { Name = "MySQL-Subnet-Group" }

}
 
resource "aws_db_instance" "mysql" {

  identifier              = "mysqldatabase"

  engine                  = "mysql"

  engine_version          = "8.0.36"

  instance_class          = "db.t3.small"

  allocated_storage       = 20

  username                = var.db_username

  password                = var.db_password

  multi_az                = true

  publicly_accessible     = true

  db_subnet_group_name    = aws_db_subnet_group.rds.name

  vpc_security_group_ids  = [aws_security_group.rds_sg.id]

  skip_final_snapshot     = true

  tags = { Name = "MySQLDatabase" }

}
 
# -------------------- IAM Roles --------------------

resource "aws_iam_role" "eks_cluster_role" {

  name = "EKSClusterRole"
 
  assume_role_policy = jsonencode({

    Version = "2012-10-17"

    Statement = [{

      Effect = "Allow"

      Principal = { Service = "eks.amazonaws.com" }

      Action    = "sts:AssumeRole"

    }]

  })
 
  tags = { Name = "EKSClusterRole" }

}
 
resource "aws_iam_role_policy_attachment" "eks_cluster_policy" {

  role       = aws_iam_role.eks_cluster_role.name

  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSClusterPolicy"

}
 
resource "aws_iam_role_policy_attachment" "eks_vpc_policy" {

  role       = aws_iam_role.eks_cluster_role.name

  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSVPCResourceController"

}
 
resource "aws_iam_role" "eks_nodegroup_role" {

  name = "EKSNodeGroupRole"
 
  assume_role_policy = jsonencode({

    Version = "2012-10-17"

    Statement = [{

      Effect = "Allow"

      Principal = { Service = "ec2.amazonaws.com" }

      Action    = "sts:AssumeRole"

    }]

  })
 
  tags = { Name = "EKSNodeGroupRole" }

}
 
resource "aws_iam_role_policy_attachment" "node_policy_1" {

  role       = aws_iam_role.eks_nodegroup_role.name

  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy"

}
 
resource "aws_iam_role_policy_attachment" "node_policy_2" {

  role       = aws_iam_role.eks_nodegroup_role.name

  policy_arn = "arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy"

}
 
resource "aws_iam_role_policy_attachment" "node_policy_3" {

  role       = aws_iam_role.eks_nodegroup_role.name

  policy_arn = "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"

}
 
resource "aws_iam_role_policy_attachment" "node_policy_4" {

  role       = aws_iam_role.eks_nodegroup_role.name

  policy_arn = "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryPullOnly"

}
 
resource "aws_iam_role_policy_attachment" "node_policy_5" {

  role       = aws_iam_role.eks_nodegroup_role.name

  policy_arn = "arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore"

}
 
# -------------------- EKS Cluster --------------------

resource "aws_eks_cluster" "main" {

  name     = "MyEKSCluster"

  role_arn = aws_iam_role.eks_cluster_role.arn
 
  vpc_config {

    subnet_ids = [

      aws_subnet.public_1.id,

      aws_subnet.private_1.id,

      aws_subnet.private_2.id,

      aws_subnet.private_3.id,

      aws_subnet.private_4.id

    ]

  }
 
  tags = { Name = "EksCluster" }

}
 
resource "aws_eks_node_group" "main" {

  cluster_name    = aws_eks_cluster.main.name

  node_group_name = "MyNodeGroup"

  node_role_arn   = aws_iam_role.eks_nodegroup_role.arn

  subnet_ids      = [aws_subnet.private_1.id, aws_subnet.private_3.id]
 
  scaling_config {

    desired_size = 2

    max_size     = 3

    min_size     = 1

  }
 
  instance_types = ["t3.medium"]
 
  tags = { Name = "Node-group" }

}

 
# variables.tf

variable "vpc_cidr" {

  description = "CIDR block for the VPC"

  type        = string

  default     = "10.0.0.0/16"

}
 
variable "db_subnet_group_name" {

  default     = "my-db-subnet-group"

  description = "Name for the DB Subnet Group"

}
 
variable "db_username" {

  default     = "admin"

  description = "Root username for the MySQL Database"

}
 
variable "db_password" {

  description = "Root password for the MySQL Database"

  type        = string

  sensitive   = true

  default     = "adminadmin"

}
 
variable "azs" {

  type    = list(string)

  default = ["us-east-1a", "us-east-1b"]

}
 
# outputs.tf

output "rds_endpoint" {

  description = "RDS Endpoint"

  value       = aws_db_instance.mysql.endpoint

}
